# omspy-brokers

./: .gitignore  README.md  pyproject.toml
omspy_brokers/: alice_blue.py  alice_blue.yaml  fyers.py
tests/: test_alice_blue.py
tests/data/alice_blue/: orders.json
