[tool.poetry]
name = "omspy-brokers"
version = "0.1.0"
description = ""
authors = ["darkseid <uberdeveloper001@gmail.com>"]
readme = "README.md"
packages = [{include = "omspy_brokers"}]

[tool.poetry.dependencies]
python = "^3.9"
omspy = "^0.7.1"
pya3 = "^1.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
